--- a/javaScript设计模式/代码规范/1.js代码规范.md
+++ b/javaScript设计模式/代码规范/1.js代码规范.md
@@ -4,8 +4,7 @@
    - [3. 编码规范(Coding Conventions)](#3)
    - [4.命名规范(Naming Conventions)](#4)
 
-<h2 id="1">1.为什要遵守代码规范</h2>
-
+# 1.为什要遵守代码规范(#1)
 软件bug的修复是昂贵的，并且随着时间的推移，这些bug的成本也会增加，尤其当这些bug潜伏并慢慢出现在已经发布的软件中时。当你发现bug 的时候就立即修复它是最好的，此时你代码要解决的问题在你脑中还是很清晰的。否则，你转移到其他任务，忘了那个特定的代码，一段时间后再去查看这些代码就 需要：
 
  -  花时间学习和理解这个问题
@@ -32,7 +31,7 @@
 -  已记录
 
 
-<h2 id="2">2. 编写代码需遵守的几个原则</h2>
+# 1.为什要遵守代码规范(#2)
 **提示：** 不遵守这些原则代码也能运行起来。只是可能出现难以维护的现象。规范就像一种模式，大家按照一种模式来，那么阅读其他人的代码，成本就降低了。
 
 
