--- a/javaScript设计模式/代码规范/1.js代码规范.md
+++ b/javaScript设计模式/代码规范/1.js代码规范.md
@@ -1,6 +1,6 @@
 # 目录 
    - [1.为什要遵守代码规范](#1)
-   - [2. 编写代码需遵守的几个原则](#2)
+   - [2. 编写代码需遵守的几个原则](2. 编写代码需遵守的几个原则)
    - [3. 编码规范(Coding Conventions)](#3)
    - [4.命名规范(Naming Conventions)](#4)
 
@@ -31,7 +31,7 @@
 -  已记录
 
 
-# 1.为什要遵守代码规范(#2)
+# 2. 编写代码需遵守的几个原则
 **提示：** 不遵守这些原则代码也能运行起来。只是可能出现难以维护的现象。规范就像一种模式，大家按照一种模式来，那么阅读其他人的代码，成本就降低了。
 
 
