--- a/javaScript设计模式/代码规范/1.js代码规范.md
+++ b/javaScript设计模式/代码规范/1.js代码规范.md
@@ -1,6 +1,6 @@
 # 目录 
    - [1.为什要遵守代码规范](#1)
-   - [2. 编写代码需遵守的几个原则](2. 编写代码需遵守的几个原则)
+   - [2. 编写代码需遵守的几个原则](#2. 编写代码需遵守的几个原则)
    - [3. 编码规范(Coding Conventions)](#3)
    - [4.命名规范(Naming Conventions)](#4)
 
