css 代码规范总结

--- a/javaScript设计模式/代码规范/1.js代码规范.md
+++ b/javaScript设计模式/代码规范/1.js代码规范.md
@@ -301,6 +301,6 @@ JavaScript并没有类，但有new调用的构造函数：
 
 # 5.css代码规范
  
-css规范我们伟大的张旭鑫老师，讲的很清楚。[精简高效的CSS命名准则/方法](http://www.zhangxinxu.com/wordpress/2010/09/%E7%B2%BE%E7%AE%80%E9%AB%98%E6%95%88%E7%9A%84css%E5%91%BD%E5%90%8D%E5%87%86%E5%88%99%E6%96%B9%E6%B3%95/)
+css规范我们伟大的张旭鑫老师，讲的很清楚。[面向属性的命名](http://www.zhangxinxu.com/wordpress/2010/09/%E7%B2%BE%E7%AE%80%E9%AB%98%E6%95%88%E7%9A%84css%E5%91%BD%E5%90%8D%E5%87%86%E5%88%99%E6%96%B9%E6%B3%95/)
 
 这是比较好的命名规范。简介来说，就是我们先定义好一些常用基础类样式。组件则使用less,或者sass进行组装，形成即可。
